@@ -1,3 +1,3 @@
-EBUILD cds-meta-11.9.ebuild 1668 RMD160 07a06e42d6456b0b12b6b7ad6a787a9d0e4b23c3 SHA1 d3c5d0bceecd6dc324511bdcbc08425f9e9b0a81 SHA256 deb1b5a2076c50d40198e0f774791b67657256b0c2807e39c759c3c687848a57
-MISC ChangeLog 2738 RMD160 ff306169c0e46c52640f902bef54267ba5f4ba5a SHA1 d73ed1bc911b08c0e83492da1ea71004cf93f7fb SHA256 a5caa0e6763cd15b41cc8a46c8b7794e9371fe472b1f1418853bf114e1bcd4d4
+EBUILD cds-meta-11.9-r1.ebuild 1452 RMD160 68629c9edc0f31a9d551e7a57aa531ba7153fc15 SHA1 f9c6e1808774163b1be90ce33759648950ea4467 SHA256 5514115c57a7fdf92046b17172a8dc9aa900394d241776f5c7ccc9535bf7cd52
+MISC ChangeLog 2944 RMD160 16914c7db78004cde44ae49cbf8911441c407327 SHA1 08525cff4ab3f940390cb316d8f450edd55a1725 SHA256 765c1090c5e723bb04e9b943ae6376db28c0aaebc688443dd3508e8587e04aa9
 MISC metadata.xml 260 RMD160 6945f0c9b210fe3068c6e5a6f7d5071cf9043369 SHA1 49f5ce48babea34bb39ff3f0d9d7c3adf9665da2 SHA256 74bbb85f1ec54eab72a905a78ffd5ac51bc7c3f64e9731418aa68f773d2bfba8
