@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cds-meta-11.9-r1 (22 Sep 2011)
+
+  22 Sep 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cds-meta-11.9.ebuild, +cds-meta-11.9-r1.ebuild:
+  remove apache web server, torrent client and tracker.
+
 *cds-meta-11.9 (20 Sep 2011)
 
   20 Sep 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
